feat: 댓글 백엔드 계층 구조로 변환